add class TrainingSet; move plot functions to class as methods

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -456,13 +456,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "metadata_train_set = pz_server.get_product_metadata(9)\n",
     "pz_server.display_product_metadata(\"14_goldenspike_train\") "
@@ -517,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_plots.train_set_plots(train_set, mag_name=\"mag_i\", redshift_name=\"z_true\")"
+    "train_set.plot(mag_name=\"mag_i\", redshift_name=\"z_true\")"
    ]
   },
   {
