notebooks in separate folder

--- a/notebooks/pz_server_tutorial.ipynb
+++ b/notebooks/pz_server_tutorial.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pz_server import PzServer #, pz_plots\n",
+    "from pz_server import PzServer \n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -313,7 +313,7 @@
     "\n",
     "All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner and removing blank spaces, upper cases, and special charecters. \n",
     "\n",
-    "The methods `get_product_metadata()` returns (as a dictionary) the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name** (remove # to try out different ways of providing the product id). "
+    "The methods `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name** (remove # to try out different ways of providing the product id). "
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the previous \"get_\" methods, there is a correspondent \"display_\" method for the product metadata to show the same results, but as a table: "
+    "As the previous \"get_\" methods, there is a correspondent \"display_\" method for the product metadata to show the same results, but as a table (convenient for use in Jupyter environment):  "
    ]
   },
   {
@@ -351,7 +351,17 @@
    "source": [
     "#### Retrieve a given Spec-z Catalog \n",
     "\n",
-    "The methods `get_product()` returns the data stored under a given product **id**. For simple tabular data (product types: Spec-z Catalog and Training Set), the methods returns an object of a class corresponding to the product type (classes: SpeczCatalog or TrainingSet), which are simple extensions of the class _pandas.DataFrame_ with some particular attributes and methods). Let's see an axample with a Spec-z Catalog:"
+    "The methods `get_product()` returns the data stored under a given product **id**. For simple tabular data (product types: **Spec-z Catalog** and **Training Set**), the method returns an object of a class corresponding to the product type (classes: SpeczCatalog or TrainingSet), which are simple extensions of the class _pandas.DataFrame_ with some particular attributes and methods). Let's see an axample with a Spec-z Catalog:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.__version__"
    ]
   },
   {
@@ -362,10 +372,52 @@
    },
    "outputs": [],
    "source": [
-    "#specz_catalog = pz_server.get_product(<product id number>)\n",
+    "#specz_catalog = pz_server.get_product(<product id number or name>)\n",
     "specz_catalog = pz_server.get_product(6)\n",
     "specz_catalog"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz_catalog.product_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pz_server.catalog import SpeczCatalog\n",
+    "specz_catalog = SpeczCatalog(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -387,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The class `SpeczCatalog` brings a basic plot methods for quick visualization of catalog properties. "
+    "Basic plots for quick visualization of catalog properties "
    ]
   },
   {
@@ -398,6 +450,31 @@
    "source": [
     "specz_catalog.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz_catalog.product_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz_catalog.attrs[\"prod_type\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
