solve bug in child class constructor

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -12,11 +12,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import sys  \n",
-    "sys.path.insert(0, '.')\n",
-    "\n",
-    "from core import PzServer \n",
+    "from pz_server import PzServer \n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -140,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pz_server.display_products_list(filters={\"product_type\": \"Spec-z Catalog\"})"
+    "pz_server.display_products_list(filters={\"product_type\": \"Spec-z Catalog\"})"
    ]
   },
   {
@@ -196,7 +200,7 @@
    "outputs": [],
    "source": [
     "#specz_catalog = pz_server.get_product(<product id number or name>)\n",
-    "specz_catalog = pz_server.get_product(6)\n",
+    "specz_catalog = pz_server.get_product(8)\n",
     "specz_catalog"
    ]
   },
@@ -207,6 +211,24 @@
    "outputs": [],
    "source": [
     "specz_catalog.attrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz_catalog.metadata['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz_catalog.display_metadata()"
    ]
   },
   {
