update tutorial notebook with table of contents

--- a/notebooks/pz_server_tutorial.ipynb
+++ b/notebooks/pz_server_tutorial.ipynb
@@ -8,10 +8,8 @@
     "<img align=\"left\" src = https://cdn2.webdamdb.com/1280_c3PXjCZbPM23.png width=180> <!-- style=\"padding: 20px\"--> \n",
     "\n",
     "# Photo-z Server - Tutorial Notebook\n",
-    "\n",
-    "**Contact author**: Julia Gschwend ([julia@linea.org.br](mailto:julia@linea.org.br)) \n",
-    "\n",
-    "**Last verified run**: 2022-11-07 <br>\n",
+    "- **Contact author**: [Julia Gschwend](mailto:julia@linea.org.br)\n",
+    "- **Last verified run**: 2023-01-16 <br>\n",
     "\n"
    ]
   },
@@ -19,12 +17,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Introduction\n",
+    "<a class=\"anchor\" id=\"contents\"></a>\n",
+    "#### Notebook contents\n",
+    "\n",
+    "0. [Introduction](#intro) \n",
+    "1. [Spec-z Catalogs](#spec)\n",
+    "2. [Training Sets](#train)\n",
+    "3. [Photo-z Validation Results](#valid)\n",
+    "4. [Photo-z Tables](#pz_tables)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"intro\"></a>\n",
+    "## 0. Introduction \n",
+    "<div style=\"text-align: right\"> \n",
+    "<a href=\"#contents\">back to the top</a>\n",
+    "</div> \n",
+    "<p>\n",
+    "    \n",
     "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website https://pz-server.linea.org.br/ (during the test phase, the test environment is available at https://pz-server-dev.linea.org.br/). There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
     "\n",
     "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. \n",
     "\n",
-    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  \n"
+    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  \n",
+    "\n"
    ]
   },
   {
@@ -269,6 +288,7 @@
     "tags": []
    },
    "source": [
+    "<a class=\"anchor\" id=\"spec\"></a>\n",
     "## 1. Spec-z Catalog \n",
     "\n",
     "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources and should be provided as a single file with tabular data to PZ Server's the upload tool. \n",
@@ -480,6 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"train\"></a>\n",
     "## 2. Training Sets \n",
     "\n",
     "In the context of the PZ Server, Training Sets are defined as the product of matching (spatially) a given Spec-z Catalog (single survey or compilation) to the photometric data, in this case, the LSST Objects Catalog. The PZ Server API offers a tool called _Training Set Maker_ for users to build customized Training Sets based on the Spec-z Catalogs available. Please see the companion Jupyter Notebook `pz_tsm_tutorial.ipynb` for details.   \n",
@@ -594,6 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"valid\"></a>\n",
     "## 3. Photo-z Validation Results\n",
     "\n",
     "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar, or .tar.gz) before uploading it to the Photo-z Server.   \n",
@@ -657,6 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"pz_tables\"></a>\n",
     "## 4. Photo-z Tables "
    ]
   },
