Added docker compose with pzserver backend

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,19 +123,35 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_1d6a4\">\n",
+       "<table id=\"T_5d5c9\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_1d6a4_level0_col0\" class=\"col_heading level0 col0\" >product_type</th>\n",
-       "      <th id=\"T_1d6a4_level0_col1\" class=\"col_heading level0 col1\" >description</th>\n",
+       "      <th id=\"T_5d5c9_level0_col0\" class=\"col_heading level0 col0\" >product_type</th>\n",
+       "      <th id=\"T_5d5c9_level0_col1\" class=\"col_heading level0 col1\" >description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_5d5c9_row0_col0\" class=\"data row0 col0\" >Spec-z Catalog</td>\n",
+       "      <td id=\"T_5d5c9_row0_col1\" class=\"data row0 col1\" >Catalog of spectroscopic redshifts and positions (usually equatorial coordinates).</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_5d5c9_row1_col0\" class=\"data row1 col0\" >Training Set</td>\n",
+       "      <td id=\"T_5d5c9_row1_col1\" class=\"data row1 col1\" >Catalogs resulting from cross-matching between spec-z and photometric catalogs, built to be used as training (and validation) set for photo-z algorithms. It usually contains magnitudes, errors, and accurate redshifts.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_5d5c9_row2_col0\" class=\"data row2 col0\" >Validation Results</td>\n",
+       "      <td id=\"T_5d5c9_row2_col1\" class=\"data row2 col1\" >Results of a photo-z validation procedure (free format). Usually contains photo-z estimates (single estimates and/or pdf) of a validation set and photo-z validation metrics.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_5d5c9_row3_col0\" class=\"data row3 col0\" >Photo-z Table</td>\n",
+       "      <td id=\"T_5d5c9_row3_col1\" class=\"data row3 col1\" >Results of a photo-z estimation procedure. If the data is larger than the file upload limit (200MB), the product entry stores only the metadata (instructions on accessing the data should be provided in the description field.</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f5e45ebc8b0>"
+       "<pandas.io.formats.style.Styler at 0x7f0c90241f00>"
       ]
      },
      "metadata": {},
@@ -155,17 +171,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mnotebook controller is DISPOSED. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_c29d8\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c29d8_level0_col0\" class=\"col_heading level0 col0\" >username</th>\n",
+       "      <th id=\"T_c29d8_level0_col1\" class=\"col_heading level0 col1\" >user</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row0_col0\" class=\"data row0 col0\" >AndressaWille</td>\n",
+       "      <td id=\"T_c29d8_row0_col1\" class=\"data row0 col1\" ></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row1_col0\" class=\"data row1 col0\" >Gschwend</td>\n",
+       "      <td id=\"T_c29d8_row1_col1\" class=\"data row1 col1\" >Julia Gschwend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row2_col0\" class=\"data row2 col0\" >HeloisaMengisztki</td>\n",
+       "      <td id=\"T_c29d8_row2_col1\" class=\"data row2 col1\" >HeloisaMengisztki</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row3_col0\" class=\"data row3 col0\" >MelissaGraham</td>\n",
+       "      <td id=\"T_c29d8_row3_col1\" class=\"data row3 col1\" >Melissa Graham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row4_col0\" class=\"data row4 col0\" >admin</td>\n",
+       "      <td id=\"T_c29d8_row4_col1\" class=\"data row4 col1\" ></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row5_col0\" class=\"data row5 col0\" >crisingulani</td>\n",
+       "      <td id=\"T_c29d8_row5_col1\" class=\"data row5 col1\" ></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row6_col0\" class=\"data row6 col0\" >gabrieloliveira2428</td>\n",
+       "      <td id=\"T_c29d8_row6_col1\" class=\"data row6 col1\" >Gabriel Oliveira</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row7_col0\" class=\"data row7 col0\" >glaubervila</td>\n",
+       "      <td id=\"T_c29d8_row7_col1\" class=\"data row7 col1\" >Glauber Costa Vila-Verde</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row8_col0\" class=\"data row8 col0\" >gschwend</td>\n",
+       "      <td id=\"T_c29d8_row8_col1\" class=\"data row8 col1\" >Julia Gschwend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row9_col0\" class=\"data row9 col0\" >gverde</td>\n",
+       "      <td id=\"T_c29d8_row9_col1\" class=\"data row9 col1\" ></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row10_col0\" class=\"data row10 col0\" >melissa</td>\n",
+       "      <td id=\"T_c29d8_row10_col1\" class=\"data row10 col1\" ></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_c29d8_row11_col0\" class=\"data row11 col0\" >singulani</td>\n",
+       "      <td id=\"T_c29d8_row11_col1\" class=\"data row11 col1\" ></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f0c4aad6140>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -181,17 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mnotebook controller is DISPOSED. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_347c4\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_347c4_level0_col0\" class=\"col_heading level0 col0\" >release</th>\n",
+       "      <th id=\"T_347c4_level0_col1\" class=\"col_heading level0 col1\" >description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_347c4_row0_col0\" class=\"data row0 col0\" >LSST DP0</td>\n",
+       "      <td id=\"T_347c4_row0_col1\" class=\"data row0 col1\" >LSST Data Preview 0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f0c902437c0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -927,11 +1023,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "eb4a0ac80907d7f44e1a5e88d3d3381b33e3dbedd3a24d113e876f30a0c46bee"
+    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
    }
   }
  },
